<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewName"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"/>

    <EditText
        android:id="@+id/productEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:width="250sp"
        android:textSize="14sp"
        android:hint="@string/viewName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewPrice"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"/>

    <EditText
        android:id="@+id/priceEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:width="250sp"
        android:textSize="14sp"
        android:hint="@string/viewPrice"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewTag"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"/>

    <EditText
        android:id="@+id/tagEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:width="250sp"
        android:textSize="14sp"
        android:hint="@string/viewTag"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveProduct"
        android:textAllCaps="false"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="100sp"
        android:onClick="btnSave"/>


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"/>

    <TextView
        android:id="@+id/tvTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Tags"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"/>
</LinearLayout>